change slide size to lvh to prevent jumping

--- a/styles/components/Slide.scss
+++ b/styles/components/Slide.scss
@@ -1,5 +1,5 @@
 .slide {
-  height: 100vh;
+  height: 100lvh;
   width: 100%;
   scroll-snap-align: start;
 }
