--- a/styles/config/base.scss
+++ b/styles/config/base.scss
@@ -20,9 +20,10 @@ html {
   font-size: 62.5%;
   min-height: 100%;
   scroll-snap-type: y mandatory;
-  height: 100vh;
+  height: 100lvh;
   overflow-y: scroll;
   box-sizing: border-box;
+  scroll-snap-stop: always;
 }
 
 body {
